Remove extra redefinitions of add_embeddings

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,9 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mps\n"
+     ]
+    }
+   ],
    "source": [
     "device_name = \"cpu\"  # Default device is CPU\n",
     "if torch.cuda.is_available():\n",
@@ -149,12 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_param = \"DistilRoBERTa\"\n",
-    "task_param = \"wnli\"\n",
+    "task_param = \"mrpc\"\n",
     "embedding_param = [\"meanpool_single\"]"
    ]
   },
@@ -167,19 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.dense.weight', 'lm_head.layer_norm.weight', 'lm_head.layer_norm.bias', 'lm_head.dense.bias', 'lm_head.bias']\n",
-      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if model_param == \"MPNet\":\n",
     "\n",
@@ -206,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,9 +228,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
+       "        num_rows: 3668\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
+       "        num_rows: 408\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
+       "        num_rows: 1725\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "if task_param == \"mnli_matched\": \n",
     "    data = load_dataset(\"glue\", \"mnli\") \n",
@@ -266,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,9 +318,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "meanpool_single embeddings found!\n",
+      "X_train shape: (3668, 1536)\n",
+      "X_val shape  : (408, 1536)\n",
+      "X_test shape : (1725, 1536)\n"
+     ]
+    }
+   ],
    "source": [
     "total_length = len(embedding_param)\n",
     "\n",
@@ -342,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,9 +608,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train shape: (3668, 1536)\n",
+      "X_val shape  : (408, 1536)\n",
+      "X_test shape : (1725, 1536)\n"
+     ]
+    }
+   ],
    "source": [
     "X_train = np.concatenate(X_train, axis=1)\n",
     "X_val = np.concatenate(X_val, axis=1)\n",
@@ -596,74 +639,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_embeddings(embeddings, column_ids, embedding_size, is_UV, is_diff, is_mult):\n",
-    "    '''\n",
-    "    Add embeddings at specific column_ids. For example, for the matrix\n",
-    "    [Z1, Z2, U1, V1, Z3, U2, V2], if we want to replace this with:\n",
-    "    [Z1, Z2, U1 - V1, Z3, U2, V2, U2 - V2, U2 * V2], we provide the parameters:\n",
-    "    is_UV = [False, True] : U1, V1 are NOT kept, but U2, V2 are kept\n",
-    "    is_diff = [True, True] : both U1 - V1 and U2 - V2 are added\n",
-    "    is_mult = [False, True] : U1 * V1 is not included, U2 * V2 is included\n",
-    "\n",
-    "    Args:\n",
-    "        embeddings : original matrix to replace\n",
-    "        column_ids : location of Ux (we assume Vx immedeately follows Ux), \n",
-    "                     for the above example, we would provide column_ids = [2, 5].\n",
-    "                     If you DO NOT want to replace a certain Ux, simply don't include its id in column_ids\n",
-    "        is_UV : should Ux, Vx be included\n",
-    "        is_diff : should Ux - Vx be included\n",
-    "        is_mult : should Ux * Vx be included\n",
-    "    '''\n",
-    "\n",
-    "    id_delta = 0 # keep track of changes to embedding inserts/deletions\n",
-    "    for id, column_id in enumerate(column_ids):\n",
-    "\n",
-    "        if id>0:\n",
-    "            if not is_UV[id-1]:\n",
-    "                id_delta -= 2\n",
-    "            if is_diff[id-1]:\n",
-    "                id_delta += 1\n",
-    "            if is_mult[id-1]:\n",
-    "                id_delta += 1\n",
-    "\n",
-    "        start_id = (column_id + id_delta) * embedding_size\n",
-    "        U_id = start_id + embedding_size\n",
-    "        V_id = start_id + (2*embedding_size)\n",
-    "\n",
-    "        U = embeddings[:, start_id:U_id]\n",
-    "        V = embeddings[:, U_id:V_id]\n",
-    "\n",
-    "        if is_diff[id] and not is_mult[id]:\n",
-    "            new_embeddings = (U - V)\n",
-    "        elif not is_diff[id] and is_mult[id]:\n",
-    "            new_embeddings = U * V\n",
-    "        else: # both\n",
-    "            new_embeddings = np.hstack([(U - V), (U * V)])\n",
-    "\n",
-    "        if is_UV[id]:                  \n",
-    "            embeddings = np.hstack([\n",
-    "                embeddings[:, :V_id],       # Part of original matrix before replacement\n",
-    "                new_embeddings,             # New embeddings to insert\n",
-    "                embeddings[:, V_id:]        # Part of original matrix after replacement\n",
-    "            ])\n",
-    "        else:\n",
-    "            embeddings = np.hstack([\n",
-    "                embeddings[:, :start_id],   # Part of original matrix before replacement\n",
-    "                new_embeddings,             # New embeddings to insert\n",
-    "                embeddings[:, V_id:]        # Part of original matrix after replacement\n",
-    "            ])\n",
-    "    return embeddings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3668, 768)\n",
+      "(408, 768)\n",
+      "(1725, 768)\n"
+     ]
+    }
+   ],
    "source": [
     "######################\n",
     "# Choose ids of (Ux, Vx) to alter embeddings\n",
@@ -695,9 +683,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 hyperparameter combinations\n"
+     ]
+    }
+   ],
    "source": [
     "input_size = X_train_computed.shape[1]\n",
     "\n",
@@ -708,7 +704,7 @@
     "    'category': [task_config.class_type],\n",
     "    'norm': [False],\n",
     "    'input_size': [768],\n",
-    "    'layer_size': [768],\n",
+    "    'layer_size': [2],\n",
     "    'num_classes': [task_config.num_classes],\n",
     "    'num_layers': [1],\n",
     "    'weight_decay': [0.0001],\n",
@@ -729,10 +725,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving results to ./../../fast-results/results/meanpool_single/mrpc/val_20240213_154310_DistilRoBERTa.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "584a5404f0274df297f549d7d8979bac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'FeedForward' object has no attribute 'parameters'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 48\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;66;03m# Initialize the model with current set of hyperparameters\u001b[39;00m\n\u001b[1;32m     47\u001b[0m feed_forward \u001b[38;5;241m=\u001b[39m FeedForward(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mparams)\n\u001b[0;32m---> 48\u001b[0m \u001b[43msummary\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfeed_forward\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mparam_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43minput_size\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     50\u001b[0m metrics, train_times_per_epoch, energy_per_epoch \u001b[38;5;241m=\u001b[39m feed_forward\u001b[38;5;241m.\u001b[39mfit(X_train_computed,\n\u001b[1;32m     51\u001b[0m                                                                     Y_train,\n\u001b[1;32m     52\u001b[0m                                                                     X_val_computed,\n\u001b[1;32m     53\u001b[0m                                                                     Y_val)\n\u001b[1;32m     55\u001b[0m \u001b[38;5;66;03m# Log average training time per epoch for current parameter set\u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m# Note: FFN frequently stops early\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniforge3/envs/fast/lib/python3.9/site-packages/torchinfo/torchinfo.py:212\u001b[0m, in \u001b[0;36msummary\u001b[0;34m(model, input_size, input_data, batch_dim, cache_forward_pass, col_names, col_width, depth, device, dtypes, mode, row_settings, verbose, **kwargs)\u001b[0m\n\u001b[1;32m    209\u001b[0m     cache_forward_pass \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    211\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m device \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 212\u001b[0m     device \u001b[38;5;241m=\u001b[39m \u001b[43mget_device\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    213\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(device, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m    214\u001b[0m     device \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mdevice(device)\n",
+      "File \u001b[0;32m~/miniforge3/envs/fast/lib/python3.9/site-packages/torchinfo/torchinfo.py:481\u001b[0m, in \u001b[0;36mget_device\u001b[0;34m(model, input_data)\u001b[0m\n\u001b[1;32m    479\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m input_data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    480\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 481\u001b[0m         model_parameter \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mnext\u001b[39m(\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparameters\u001b[49m())\n\u001b[1;32m    482\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[1;32m    483\u001b[0m         model_parameter \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'FeedForward' object has no attribute 'parameters'"
+     ]
+    }
+   ],
    "source": [
+    "from torchinfo import summary\n",
+    "\n",
     "# Create output folder if it doesn't exist\n",
     "if not os.path.exists('output'):\n",
     "    os.makedirs('output')\n",
@@ -778,6 +811,7 @@
     "\n",
     "    # Initialize the model with current set of hyperparameters\n",
     "    feed_forward = FeedForward(**params)\n",
+    "    summary(feed_forward, input_size=(param_grid['input_size'],))\n",
     "\n",
     "    metrics, train_times_per_epoch, energy_per_epoch = feed_forward.fit(X_train_computed,\n",
     "                                                                        Y_train,\n",
@@ -817,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
