--- a/fast/predict.ipynb
+++ b/fast/predict.ipynb
@@ -345,71 +345,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_embeddings(embeddings, column_ids, embedding_size, is_UV, is_diff, is_mult):\n",
-    "    '''\n",
-    "    Add embeddings at specific column_ids. For example, for the matrix\n",
-    "    [Z1, Z2, U1, V1, Z3, U2, V2], if we want to replace this with:\n",
-    "    [Z1, Z2, U1 - V1, Z3, U2, V2, U2 - V2, U2 * V2], we provide the parameters:\n",
-    "    is_UV = [False, True] : U1, V1 are NOT kept, but U2, V2 are kept\n",
-    "    is_diff = [True, True] : both U1 - V1 and U2 - V2 are added\n",
-    "    is_mult = [False, True] : U1 * V1 is not included, U2 * V2 is included\n",
-    "\n",
-    "    Args:\n",
-    "        embeddings : original matrix to replace\n",
-    "        column_ids : location of Ux (we assume Vx immedeately follows Ux), \n",
-    "                     for the above example, we would provide column_ids = [2, 5].\n",
-    "                     If you DO NOT want to replace a certain Ux, simply don't include its id in column_ids\n",
-    "        is_UV : should Ux, Vx be included\n",
-    "        is_diff : should Ux - Vx be included\n",
-    "        is_mult : should Ux * Vx be included\n",
-    "    '''\n",
-    "\n",
-    "    id_delta = 0 # keep track of changes to embedding inserts/deletions\n",
-    "    for id, column_id in enumerate(column_ids):\n",
-    "\n",
-    "        if id>0:\n",
-    "            if not is_UV[id-1]:\n",
-    "                id_delta -= 2\n",
-    "            if is_diff[id-1]:\n",
-    "                id_delta += 1\n",
-    "            if is_mult[id-1]:\n",
-    "                id_delta += 1\n",
-    "\n",
-    "        start_id = (column_id + id_delta) * embedding_size\n",
-    "        U_id = start_id + embedding_size\n",
-    "        V_id = start_id + (2*embedding_size)\n",
-    "\n",
-    "        U = embeddings[:, start_id:U_id]\n",
-    "        V = embeddings[:, U_id:V_id]\n",
-    "\n",
-    "        if is_diff[id] and not is_mult[id]:\n",
-    "            new_embeddings = np.abs(U - V)\n",
-    "        elif not is_diff[id] and is_mult[id]:\n",
-    "            new_embeddings = U * V\n",
-    "        else: # both\n",
-    "            new_embeddings = np.hstack([np.abs(U - V), (U * V)])\n",
-    "\n",
-    "        if is_UV[id]:                  \n",
-    "            embeddings = np.hstack([\n",
-    "                embeddings[:, :V_id],       # Part of original matrix before replacement\n",
-    "                new_embeddings,             # New embeddings to insert\n",
-    "                embeddings[:, V_id:]        # Part of original matrix after replacement\n",
-    "            ])\n",
-    "        else:\n",
-    "            embeddings = np.hstack([\n",
-    "                embeddings[:, :start_id],   # Part of original matrix before replacement\n",
-    "                new_embeddings,             # New embeddings to insert\n",
-    "                embeddings[:, V_id:]        # Part of original matrix after replacement\n",
-    "            ])\n",
-    "    return embeddings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "######################\n",
     "# Choose ids of (Ux, Vx) to alter embeddings\n",
     "column_ids = [] if task_config.sentence_type == \"one\" else [0]\n",
@@ -417,7 +352,7 @@
     "\n",
     "if column_ids:\n",
     "    f = lambda embeddings : add_embeddings(embeddings=embeddings, column_ids=column_ids, embedding_size=768, \n",
-    "                                           is_UV=[False], is_diff=[True], is_mult=[False])\n",
+    "                                           is_UV=[False], is_diff=[True], is_mult=[False], use_abs=[True])\n",
     "\n",
     "    X_train_computed = f(embeddings=X_train)\n",
     "    X_val_computed = f(embeddings=X_val)\n",
