Hotfix to fix missing add_embeddings import

--- a/fast/predict.ipynb
+++ b/fast/predict.ipynb
@@ -76,7 +76,8 @@
     "import torch\n",
     "from datasets import load_dataset\n",
     "\n",
-    "from utils.feed_forward import FeedForward"
+    "from utils.feed_forward import FeedForward\n",
+    "from utils.embeddings import add_embeddings"
    ]
   },
   {
