--- a/fast/adapters.ipynb
+++ b/fast/adapters.ipynb
@@ -18,38 +18,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## User input"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "adapter_type options: bottleneck, prefix, prompt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "task_param = \"cola\"\n",
-    "adapter_type = \"bottleneck\"\n",
-    "\n",
-    "training_params = {\n",
-    "    'learning_rate': 1e-4,\n",
-    "    'num_train_epochs': 1,\n",
-    "    'per_device_train_batch_size': 32,\n",
-    "    'per_device_eval_batch_size': 32,\n",
-    "    'output_dir': 'adapter-distillroberta-base'\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Setup"
    ]
   },
@@ -62,19 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
     "import torch\n",
+    "import itertools\n",
+    "import pathlib\n",
+    "import csv\n",
+    "from datetime import datetime\n",
     "from collections import namedtuple\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
     "# Dataset\n",
     "from datasets import load_dataset\n",
     "from transformers import RobertaTokenizer, RobertaConfig, TrainingArguments, EvalPrediction, default_data_collator\n",
-    "from adapters import AutoAdapterModel, AdapterTrainer, ConfigUnion, BnConfig, ParBnConfig, PrefixTuningConfig, PromptTuningConfig"
+    "from adapters import AutoAdapterModel, AdapterTrainer, BnConfig, PrefixTuningConfig, PromptTuningConfig, ConfigUnion,  ParBnConfig"
    ]
   },
   {
@@ -86,17 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mps\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device_name = \"cpu\"  # Default device is CPU\n",
     "if torch.cuda.is_available():\n",
@@ -116,12 +81,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## User input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "adapter_type options: bottleneck, prefix, prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "task_param = \"mrpc\"\n",
+    "adapter_type = \"bottleneck\"\n",
+    "\n",
+    "param_grid = {\n",
+    "    'learning_rate': [3e-5, 3e-4, 3e-3],\n",
+    "    'num_train_epochs': [1],\n",
+    "    'per_device_train_batch_size': [32],\n",
+    "    'per_device_eval_batch_size': [32],\n",
+    "    'bn_reduction_factor': [8, 64, 256],\n",
+    "    'output_dir': ['adapter-distillroberta-base']\n",
+    "}\n",
+    "\n",
+    "all_params = [dict(zip(param_grid.keys(), v)) for v in itertools.product(*param_grid.values())]\n",
+    "print(f\"{len(all_params)} hyperparameter combinations\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Task"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,33 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 8551\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 1043\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 1063\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if task_param == \"mnli_matched\": \n",
     "    data = load_dataset(\"glue\", \"mnli\") \n",
@@ -212,38 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9f51c80ba3549048663e8a2423139c2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/1043 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0131112f72d048f995c5cd4fa194c896",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/1063 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer = RobertaTokenizer.from_pretrained('distilroberta-base')\n",
     "\n",
@@ -278,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adapter"
+    "## Model & Adapter Setup"
    ]
   },
   {
@@ -290,25 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of RobertaAdapterModel were not initialized from the model checkpoint at distilroberta-base and are newly initialized: ['heads.default.3.bias']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total trainable parameters for raw model: 82760793\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if task_config.class_type == \"R\":\n",
     "    config = RobertaConfig.from_pretrained(\"distilroberta-base\")\n",
@@ -321,67 +253,81 @@
     "    \"distilroberta-base\",\n",
     "    config=config).to(device)\n",
     "\n",
-    "pytorch_total_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "print(f\"total trainable parameters for raw model: {pytorch_total_params}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Adapter setup"
+    "num_trainable_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "print(f\"total trainable parameters for raw model: {num_trainable_params}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total trainable parameters for fine-tuning method: 8326235\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if adapter_type == \"bottleneck\":\n",
-    "    adapter_config = BnConfig(mh_adapter=True,\n",
-    "                            output_adapter=True,\n",
-    "                            reduction_factor=2,\n",
-    "                            non_linearity='relu')\n",
-    "elif adapter_type == \"prefix\":\n",
-    "    adapter_config = PrefixTuningConfig()\n",
-    "elif adapter_type == \"prompt\":\n",
-    "    adapter_config = PromptTuningConfig()\n",
+    "def compute_accuracy(p: EvalPrediction):\n",
+    "  preds = np.argmax(p.predictions, axis=1)\n",
+    "  return {\"accuracy\": (preds == p.label_ids).mean()}\n",
     "\n",
-    "# Other adapter config options: \n",
-    "# ParBnConfig(reduction_factor=4)\n",
-    "# PrefixTuningConfig(flat=False, prefix_length=30)\n",
-    "# ConfigUnion(\n",
-    "#     PrefixTuningConfig(prefix_length=20),\n",
-    "#     ParBnConfig(reduction_factor=4),)\n",
+    "def load_adapter_hyperparameters(model, params):\n",
+    "    if adapter_type == \"bottleneck\":\n",
+    "        adapter_config = BnConfig(mh_adapter=True,\n",
+    "                                output_adapter=True,\n",
+    "                                reduction_factor=params['bn_reduction_factor'],\n",
+    "                                non_linearity='relu')\n",
+    "    elif adapter_type == \"prefix\":\n",
+    "        adapter_config = PrefixTuningConfig()\n",
+    "    elif adapter_type == \"prompt\":\n",
+    "        adapter_config = PromptTuningConfig()\n",
     "\n",
-    "# Add a new adapter\n",
-    "model.add_adapter(task_param, config=adapter_config)\n",
+    "    # Other adapter config options: \n",
+    "    # ParBnConfig(reduction_factor=4)\n",
+    "    # PrefixTuningConfig(flat=False, prefix_length=30)\n",
+    "    # ConfigUnion(\n",
+    "    #     PrefixTuningConfig(prefix_length=20),\n",
+    "    #     ParBnConfig(reduction_factor=4),)\n",
     "\n",
-    "# Add a matching prediction head\n",
-    "if task_config.class_type == \"R\":\n",
-    "    model.add_regression_head(task_param)\n",
-    "else:\n",
-    "    model.add_classification_head(\n",
-    "        task_param,\n",
-    "        num_labels=task_config.num_classes)\n",
+    "    # Add a new adapter\n",
+    "    default_name = \"default\"\n",
     "\n",
-    "# Freeze all weights in the model except for those of the adapter\n",
-    "model.train_adapter(task_param)\n",
+    "    model.delete_adapter(default_name)\n",
+    "    model.add_adapter(default_name, config=adapter_config)\n",
     "\n",
-    "# Activate the adapter\n",
-    "model.set_active_adapters(task_param)\n",
+    "    # Add a matching prediction head\n",
+    "    if task_config.class_type == \"R\":\n",
+    "        model.add_regression_head(default_name,\n",
+    "                                overwrite_ok=True)\n",
+    "    else:\n",
+    "        model.add_classification_head(\n",
+    "            default_name,\n",
+    "            num_labels=task_config.num_classes,\n",
+    "            overwrite_ok=True)\n",
     "\n",
-    "pytorch_total_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "print(f\"total trainable parameters for fine-tuning method: {pytorch_total_params}\")"
+    "    # Freeze all weights in the model except for those of the adapter\n",
+    "    model.train_adapter(default_name)\n",
+    "\n",
+    "    # Activate the adapter\n",
+    "    model.set_active_adapters(default_name)\n",
+    "\n",
+    "    num_trainable_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "    # print(f\"total trainable parameters for fine-tuning method: {num_trainable_params}\")\n",
+    "\n",
+    "    training_args = TrainingArguments(\n",
+    "        learning_rate=params['learning_rate'],\n",
+    "        num_train_epochs=params['num_train_epochs'],\n",
+    "        per_device_train_batch_size=params['per_device_train_batch_size'],\n",
+    "        per_device_eval_batch_size=params['per_device_eval_batch_size'],\n",
+    "        output_dir=params['output_dir'],\n",
+    "        overwrite_output_dir=True,\n",
+    "        remove_unused_columns=False) # Ensures dataset labels are properly passed to the model\n",
+    "\n",
+    "    trainer = AdapterTrainer(\n",
+    "        model=model,\n",
+    "        args=training_args,\n",
+    "        train_dataset=data[\"train\"],\n",
+    "        eval_dataset=data[\"validation\"],\n",
+    "        compute_metrics=compute_accuracy,\n",
+    "        data_collator=default_data_collator)\n",
+    "    \n",
+    "    return trainer"
    ]
   },
   {
@@ -395,79 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trainer setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_accuracy(p: EvalPrediction):\n",
-    "  preds = np.argmax(p.predictions, axis=1)\n",
-    "  return {\"acc\": (preds == p.label_ids).mean()}\n",
-    "\n",
-    "training_args = TrainingArguments(\n",
-    "    learning_rate=training_params['learning_rate'],\n",
-    "    num_train_epochs=training_params['num_train_epochs'],\n",
-    "    per_device_train_batch_size=training_params['per_device_train_batch_size'],\n",
-    "    per_device_eval_batch_size=training_params['per_device_eval_batch_size'],\n",
-    "    output_dir=training_params['output_dir'],\n",
-    "    overwrite_output_dir=True,\n",
-    "    remove_unused_columns=False) # Ensures dataset labels are properly passed to the model\n",
-    "\n",
-    "trainer = AdapterTrainer(\n",
-    "    model=model,\n",
-    "    args=training_args,\n",
-    "    train_dataset=data[\"train\"],\n",
-    "    eval_dataset=data[\"validation\"],\n",
-    "    compute_metrics=compute_accuracy,\n",
-    "    data_collator=default_data_collator)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Training loop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80de44b3b527427f92f5614778a8aeb5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/268 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtrainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniforge3/envs/fast/lib/python3.9/site-packages/transformers/trainer.py:1555\u001b[0m, in \u001b[0;36mTrainer.train\u001b[0;34m(self, resume_from_checkpoint, trial, ignore_keys_for_eval, **kwargs)\u001b[0m\n\u001b[1;32m   1553\u001b[0m         hf_hub_utils\u001b[38;5;241m.\u001b[39menable_progress_bars()\n\u001b[1;32m   1554\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1555\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43minner_training_loop\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1556\u001b[0m \u001b[43m        \u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1557\u001b[0m \u001b[43m        \u001b[49m\u001b[43mresume_from_checkpoint\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mresume_from_checkpoint\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1558\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtrial\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrial\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1559\u001b[0m \u001b[43m        \u001b[49m\u001b[43mignore_keys_for_eval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mignore_keys_for_eval\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1560\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniforge3/envs/fast/lib/python3.9/site-packages/transformers/trainer.py:1862\u001b[0m, in \u001b[0;36mTrainer._inner_training_loop\u001b[0;34m(self, batch_size, args, resume_from_checkpoint, trial, ignore_keys_for_eval)\u001b[0m\n\u001b[1;32m   1859\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maccelerator\u001b[38;5;241m.\u001b[39maccumulate(model):\n\u001b[1;32m   1860\u001b[0m     tr_loss_step \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtraining_step(model, inputs)\n\u001b[0;32m-> 1862\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   1863\u001b[0m     args\u001b[38;5;241m.\u001b[39mlogging_nan_inf_filter\n\u001b[1;32m   1864\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_torch_tpu_available()\n\u001b[1;32m   1865\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m (torch\u001b[38;5;241m.\u001b[39misnan(tr_loss_step) \u001b[38;5;129;01mor\u001b[39;00m torch\u001b[38;5;241m.\u001b[39misinf(tr_loss_step))\n\u001b[1;32m   1866\u001b[0m ):\n\u001b[1;32m   1867\u001b[0m     \u001b[38;5;66;03m# if loss is nan or inf simply add the average of previous logged losses\u001b[39;00m\n\u001b[1;32m   1868\u001b[0m     tr_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m tr_loss \u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate\u001b[38;5;241m.\u001b[39mglobal_step \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_globalstep_last_logged)\n\u001b[1;32m   1869\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "trainer.train()"
    ]
   },
   {
@@ -475,7 +349,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Setup for saving results\n",
+    "results_folder = pathlib.Path(f\"../../fast-results/results/{adapter_type}/{task_param}\")\n",
+    "results_folder.mkdir(parents=True, exist_ok=True)\n",
+    "save_file_id = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "results_file = results_folder / f\"val_{save_file_id}.csv\"\n",
+    "display_best = float(\"-inf\")\n",
+    "\n",
+    "with open(results_file, 'w', newline='') as csvfile:\n",
+    "    writer = csv.writer(csvfile)\n",
+    "    header = [\"eval_accuracy\", \"training_time\", \"eval_time\"] + list(all_params[0].keys())\n",
+    "    writer.writerow(header)\n",
+    "\n",
+    "bar = tqdm(enumerate(all_params), total=len(all_params))\n",
+    "for i, params in bar:\n",
+    "    trainer = load_adapter_hyperparameters(model, params)\n",
+    "    train_stats = trainer.train()\n",
+    "    eval_result = trainer.evaluate()\n",
+    "\n",
+    "    display_recent = eval_result['eval_accuracy']\n",
+    "    display_best = max(display_best, display_recent)\n",
+    "\n",
+    "    bar.set_description(f\"Best: {display_best:.5f}, Last: {display_recent:.5f}\")\n",
+    "\n",
+    "    training_time_per_epoch = train_stats.metrics['train_runtime'] / params['num_train_epochs']\n",
+    "    eval_accuracy = eval_result['eval_accuracy']\n",
+    "    eval_time_per_epoch = eval_result['eval_runtime']\n",
+    "    # Write to results csv\n",
+    "    with open(results_file, 'a', newline='') as csvfile:\n",
+    "        writer = csv.writer(csvfile)\n",
+    "        row = [eval_accuracy, training_time_per_epoch, eval_time_per_epoch] + list(params.values())\n",
+    "        writer.writerow(row)\n"
+   ]
   }
  ],
  "metadata": {
