Add prefix tuning hyperparameters

--- a/fast/adapters.ipynb
+++ b/fast/adapters.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adapters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notebook for adapter training."
+    "# Adapter Training"
    ]
   },
   {
@@ -19,13 +12,6 @@
    "metadata": {},
    "source": [
     "## Setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Modules"
    ]
   },
   {
@@ -48,13 +34,6 @@
     "from datasets import load_dataset\n",
     "from transformers import RobertaTokenizer, RobertaConfig, TrainingArguments, EvalPrediction, default_data_collator\n",
     "from adapters import AutoAdapterModel, AdapterTrainer, BnConfig, PrefixTuningConfig, PromptTuningConfig, ConfigUnion,  ParBnConfig"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Device"
    ]
   },
   {
@@ -98,15 +77,16 @@
    "outputs": [],
    "source": [
     "task_param = \"mrpc\"\n",
-    "adapter_type = \"bottleneck\"\n",
+    "adapter_type = \"prefix\"\n",
+    "output_dir = 'adapter-distillroberta-base'\n",
     "\n",
     "param_grid = {\n",
-    "    'learning_rate': [3e-5, 3e-4, 3e-3],\n",
-    "    'num_train_epochs': [1],\n",
-    "    'per_device_train_batch_size': [32],\n",
+    "    'learning_rate': [5e-3, 7e-3, 1e-2, 1e-4],\n",
+    "    'num_train_epochs': [20, 60],\n",
+    "    'per_device_train_batch_size': [8, 16, 32],\n",
     "    'per_device_eval_batch_size': [32],\n",
     "    'bn_reduction_factor': [8, 64, 256],\n",
-    "    'output_dir': ['adapter-distillroberta-base']\n",
+    "    'prefix_length': [20, 60, 100],\n",
     "}\n",
     "\n",
     "all_params = [dict(zip(param_grid.keys(), v)) for v in itertools.product(*param_grid.values())]\n",
@@ -274,7 +254,7 @@
     "                                reduction_factor=params['bn_reduction_factor'],\n",
     "                                non_linearity='relu')\n",
     "    elif adapter_type == \"prefix\":\n",
-    "        adapter_config = PrefixTuningConfig()\n",
+    "        adapter_config = PrefixTuningConfig(prefix_length=params['prefix_length'])\n",
     "    elif adapter_type == \"prompt\":\n",
     "        adapter_config = PromptTuningConfig()\n",
     "\n",
@@ -315,7 +295,7 @@
     "        num_train_epochs=params['num_train_epochs'],\n",
     "        per_device_train_batch_size=params['per_device_train_batch_size'],\n",
     "        per_device_eval_batch_size=params['per_device_eval_batch_size'],\n",
-    "        output_dir=params['output_dir'],\n",
+    "        output_dir=output_dir,\n",
     "        overwrite_output_dir=True,\n",
     "        remove_unused_columns=False) # Ensures dataset labels are properly passed to the model\n",
     "\n",
@@ -334,14 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Training loop"
+    "## Training Loop"
    ]
   },
   {
@@ -364,6 +337,7 @@
     "\n",
     "bar = tqdm(enumerate(all_params), total=len(all_params))\n",
     "for i, params in bar:\n",
+    "    # print(params) # verbose logging\n",
     "    trainer = load_adapter_hyperparameters(model, params)\n",
     "    train_stats = trainer.train()\n",
     "    eval_result = trainer.evaluate()\n",
@@ -380,7 +354,7 @@
     "    with open(results_file, 'a', newline='') as csvfile:\n",
     "        writer = csv.writer(csvfile)\n",
     "        row = [eval_accuracy, training_time_per_epoch, eval_time_per_epoch] + list(params.values())\n",
-    "        writer.writerow(row)\n"
+    "        writer.writerow(row)"
    ]
   }
  ],
