Add test set prediction code to adapters

--- a/fast/adapters.ipynb
+++ b/fast/adapters.ipynb
@@ -22,6 +22,7 @@
    "source": [
     "import os\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import torch\n",
     "import itertools\n",
     "import pathlib\n",
@@ -77,16 +78,16 @@
    "outputs": [],
    "source": [
     "task_param = \"mrpc\"\n",
-    "adapter_type = \"prefix\"\n",
+    "adapter_type = \"bottleneck\"\n",
     "output_dir = 'adapter-distillroberta-base'\n",
     "\n",
     "param_grid = {\n",
-    "    'learning_rate': [5e-3, 7e-3, 1e-2, 1e-4],\n",
-    "    'num_train_epochs': [20, 60],\n",
-    "    'per_device_train_batch_size': [8, 16, 32],\n",
+    "    'learning_rate': [0.0003],\n",
+    "    'num_train_epochs': [3],\n",
+    "    'per_device_train_batch_size': [32],\n",
     "    'per_device_eval_batch_size': [32],\n",
-    "    'bn_reduction_factor': [8, 64, 256],\n",
-    "    'prefix_length': [20, 60, 100],\n",
+    "    'bn_reduction_factor': [8],\n",
+    "    # 'prefix_length': [20, 60, 100],\n",
     "}\n",
     "\n",
     "all_params = [dict(zip(param_grid.keys(), v)) for v in itertools.product(*param_grid.values())]\n",
@@ -243,9 +244,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_accuracy(p: EvalPrediction):\n",
-    "  preds = np.argmax(p.predictions, axis=1)\n",
-    "  return {\"accuracy\": (preds == p.label_ids).mean()}\n",
+    "def compute_accuracy(prediction_object):\n",
+    "  preds = np.argmax(prediction_object.predictions, axis=1)\n",
+    "  return {\"accuracy\": (preds == prediction_object.label_ids).mean()}\n",
     "\n",
     "def load_adapter_hyperparameters(model, params):\n",
     "    if adapter_type == \"bottleneck\":\n",
@@ -355,6 +356,30 @@
     "        writer = csv.writer(csvfile)\n",
     "        row = [eval_accuracy, training_time_per_epoch, eval_time_per_epoch] + list(params.values())\n",
     "        writer.writerow(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate Test Set Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = trainer.predict(data[\"test\"])\n",
+    "\n",
+    "test_y_pred_file = results_folder / f\"y_pred_{save_file_id}.tsv\"\n",
+    "y_pred = np.argmax(predictions.predictions, axis=1)\n",
+    "y_pred_df = pd.DataFrame(y_pred, columns=[\"prediction\"])\n",
+    "y_pred_df[\"index\"] = y_pred_df.index\n",
+    "y_pred_df = y_pred_df[[\"index\", \"prediction\"]]\n",
+    "y_pred_df.to_csv(test_y_pred_file, sep='\\t', index=False, header=True)\n",
+    "print(f\"saving predictions to ./{test_y_pred_file}\")"
    ]
   }
  ],
