Add hyperparameters from literature to adapter notebook

--- a/fast/adapters.ipynb
+++ b/fast/adapters.ipynb
@@ -77,18 +77,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task_param = \"mrpc\"\n",
+    "task_param = \"sst2\"\n",
     "adapter_type = \"bottleneck\"\n",
+    "running_test_set = False\n",
     "output_dir = 'adapter-distillroberta-base'\n",
     "\n",
-    "param_grid = {\n",
-    "    'learning_rate': [0.0003],\n",
+    "param_grid_bottleneck_literature = {\n",
+    "    'learning_rate': [3e-5, 3e-4, 3e-3],\n",
+    "    'num_train_epochs': [3, 20],\n",
+    "    'per_device_train_batch_size': [32],\n",
+    "    'per_device_eval_batch_size': [32],\n",
+    "    'bn_reduction_factor': [8, 64, 256],\n",
+    "}\n",
+    "\n",
+    "param_grid_prefix_literature = {\n",
+    "    'learning_rate': [5e-3, 7e-3, 1e-2, 1e-4],\n",
+    "    'num_train_epochs': [3, 20],\n",
+    "    'per_device_train_batch_size': [32],\n",
+    "    'per_device_eval_batch_size': [32],\n",
+    "    'prefix_length': [20, 60, 100],\n",
+    "}\n",
+    "\n",
+    "param_grid_test = {\n",
+    "    'learning_rate': [0.0001],\n",
     "    'num_train_epochs': [3],\n",
     "    'per_device_train_batch_size': [32],\n",
     "    'per_device_eval_batch_size': [32],\n",
-    "    'bn_reduction_factor': [8],\n",
-    "    # 'prefix_length': [20, 60, 100],\n",
+    "    # 'bn_reduction_factor': [8],\n",
+    "    'prefix_length': [60],\n",
     "}\n",
+    "\n",
+    "if running_test_set:\n",
+    "    param_grid = param_grid_test\n",
+    "elif adapter_type == \"bottleneck\":\n",
+    "    param_grid = param_grid_bottleneck_literature\n",
+    "elif adapter_type == \"prefix\":\n",
+    "    param_grid = param_grid_prefix_literature\n",
     "\n",
     "all_params = [dict(zip(param_grid.keys(), v)) for v in itertools.product(*param_grid.values())]\n",
     "print(f\"{len(all_params)} hyperparameter combinations\")"
@@ -381,6 +405,13 @@
     "y_pred_df.to_csv(test_y_pred_file, sep='\\t', index=False, header=True)\n",
     "print(f\"saving predictions to ./{test_y_pred_file}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
