dumping temporary work to look through later

--- a/fast/glue_trimmed.ipynb
+++ b/fast/glue_trimmed.ipynb
@@ -143,13 +143,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_param = \"DistilRoBERTaBase\"\n",
     "task_param = \"qqp\"\n",
-    "embedding_param = \"cls\"\n",
+    "embedding_param = \"mean_pooling\"\n",
     "\n",
     "use_carbontracker = False \n",
     "# NOTE: Carbontracker should generate its own output file \n",
@@ -165,14 +165,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.dense.bias', 'lm_head.layer_norm.bias', 'lm_head.dense.weight', 'lm_head.layer_norm.weight', 'lm_head.bias']\n",
+      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.layer_norm.weight', 'lm_head.dense.weight', 'lm_head.bias', 'lm_head.dense.bias', 'lm_head.layer_norm.bias']\n",
       "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "})"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10000,)\n",
-      "(10000,)\n",
-      "(10000,)\n"
+      "(20000,)\n",
+      "(20000,)\n",
+      "(20000,)\n"
      ]
     }
    ],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
